# saas-template

./: .cursorrules  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml
.cursor/rules/: backend-guidelines.mdc  frontend-guidelines.mdc  project-brief.mdc
backend/: .gitignore  Makefile  README.md  pyproject.toml
backend/src/atworld/index_feeds/: categorize_feeds.py  create_topics.py  discover_categories.py  find_feeds.py  index_feeds.py  list_feeds.py  scrape_feeds.py
backend/src/mycode/api/: app.py  models.py  start_server.py
backend/src/mycode/utils/: datatypes.py  logger.py  template.py
backend/src/your_project_name/: template.py  todo.py
docs/: features_mvp.md  index.md  project-log.md  project-vision.md  roadmap.md
website/: .env.template  .gitignore  README.md  biome.jsonc  eslint.config.mjs  next-sitemap.config.js  next.config.ts  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  template.env  tsconfig.json  vercel.json
website/api/: index.py  requirements.txt
website/backend/: .env.template  .gitignore  Makefile  README.md  pyproject.toml
website/backend/src/mycode/: __init__.py  cache.py  constants.py  models.py  settings.py
website/backend/src/mycode/api/: __init__.py  app.py  start_server.py
website/backend/src/mycode/utils/: __init__.py  argument_parsing.py  logger.py  template.py
website/public/: robots.txt  sitemap-0.xml  sitemap.xml
website/scripts/: postbuild-sitemap.mjs
website/src/: auth.config.ts  auth.ts  instrumentation-client.ts  middleware.ts
website/src/app/: error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx  site-config.ts
website/src/app/(app)/: error.tsx  layout.tsx  not-found.tsx
website/src/app/(app)/p/dashboard/: page.tsx
website/src/app/(app)/p/settings/: page.tsx
website/src/app/(marketing)/: error.tsx  layout.tsx  not-found.tsx  page.tsx
website/src/app/(marketing)/about/: page.tsx
website/src/app/(marketing)/api-test/: page.tsx
website/src/app/(marketing)/login/: page.tsx
website/src/app/(marketing)/login/success/: page.tsx
website/src/app/(marketing)/privacy/: page.tsx
website/src/app/(marketing)/terms/: page.tsx
website/src/app/api/auth/[...nextauth]/: route.ts
website/src/app/api/auth/callback/: route.ts
website/src/app/api/auth/magic-callback/: route.ts
website/src/app/api/dev-auth/login/: route.ts
website/src/app/discover/: authActions.ts  blueskyActions.ts  layout.tsx  page.tsx
website/src/app/discover/[category]/: page.tsx
website/src/app/discover/feed/[creatorHandle]/[feedName]/: page.tsx
website/src/app/login/: page.tsx
website/src/app/login/reset/: page.tsx
website/src/app/login/reset/callback/: page.tsx
website/src/app/login/verify/: page.tsx
website/src/app/login/verify/callback/: page.tsx
website/src/app/p/dashboard/: page.tsx
website/src/app/privacy/: page.tsx
website/src/app/terms/: page.tsx
website/src/components/: AuthButton.tsx  AvatarDropdown.tsx  Footer.tsx  InlineSurvey.tsx  MobileNavigationDrawer.tsx  Navbar.tsx  NextAuthTest.tsx  RouteStateCard.tsx  ScrollToTop.tsx
website/src/components/auth/: AuthLayout.tsx  GoogleSignInButton.tsx  LoginForm.tsx  VerifyCallback.tsx
website/src/components/discover/: BlueskyImage.tsx  Breadcrumbs.tsx  CreatorProfile.tsx  FeedCard.tsx  FeedDescription.tsx  FeedHeader.tsx  PageContainer.tsx  SimilarFeedsSection.tsx
website/src/components/layouts/: BaseLayout.tsx
website/src/components/providers/: SessionProvider.tsx
website/src/config/: site.ts
website/src/lib/: feeds.ts  navigation.ts  seo.ts
website/src/lib/appwrite/: client.ts  server.ts
website/src/lib/auth/: actions.ts  auth.config.ts  auth.ts  config.ts  hooks.ts  index.ts  nextauth-actions.ts  server.ts  useAuth.ts
website/src/lib/posthog/: posthog-server.ts
website/src/lib/schema/: breadcrumbSchema.ts  collectionSchema.ts  feedSchema.ts
website/src/lib/supabase/: middleware.ts
website/src/stores/: useAuth.ts
website/src/types/: next-auth.d.ts
website/tests/e2e/: authenticated.spec.ts  routes.spec.ts  smoke.spec.ts
