[tool.poetry]
name = "your_project_name"                              # Change this to be the same as your folder under src/ is named
version = "0.1.0"
description = "TODO"
authors = ["Olof Harrysson <harrysson.olof@gmail.com>"]
license = "Proprietary"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"

[tool.poetry.group.dev.dependencies]
# Additional dependencies that developers need
black = "^23.10.0"
isort = "^5.12.0"
pre-commit = "^3.5.0"
# mypy = "^1.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
multi_line_output = 3

# [tool.mypy]
# python_version = "3.10"
# check_untyped_defs = true
# disallow_any_generics = true
# disallow_incomplete_defs = true
# disallow_untyped_defs = true
# no_implicit_optional = true
# warn_redundant_casts = true
# warn_unused_ignores = true
# show_error_codes = true
