[project]
name = "atworld"                                                            # Change this to be the same as your folder under src/ is named
version = "0.1.0"
description = "TODO"
authors = [{ name = "Olof Harrysson", email = "harrysson.olof@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["jsonargparse>=4.37.0", "python-dotenv>=1.0.1"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint]
extend-select = [
  "UP", # pyupgrade
  # "I",  # isort
]
