[project]
name = "mycode"
version = "0.1.0"
description = "TODO"
authors = [{ name = "Olof Harrysson", email = "olof@tandemfuture.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["joblib>=1.4.2", "jsonargparse>=4.37.0", "python-dotenv>=1.0.1"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint]
extend-select = [
  "UP", # pyupgrade
  # "I",  # isort
]

# Ignore unused variables
ignore = ["F841"]
