[project]
name = "mycode"
version = "0.1.0"
description = "TODO"
authors = [{ name = "Olof Harrysson", email = "olof@tandemfuture.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.129.0",
    "joblib>=1.5.3",
    "jsonargparse>=4.46.0",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.41.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint]
extend-select = [
  "UP", # pyupgrade
  # "I",  # isort
]

# Ignore unused variables
ignore = ["F841"]
